reversed anisotropic photometric distributions due to the
misorientation of the y-axis.  Thanks to Zack Rogers for discovering
and helping debug this problem.

Fixed long-standing bug in replmarks, where triangles with X-side
aligned with Z-axis would cause incorrect rotations.  Thanks to
Zack Rogers for finding this error.

Added rsensor program to compute sensor signal for daylighting controls.
Funding for this component was provided by the Architectural Energy
Corporation in Boulder, CO, and directed by Zack Rogers.

Added "planisphere" (stereographic) fisheye view type for traditional
daylighting analysis.  Feature requested & explained by Axel Jacobs.

Modified -c option to rtcontrib so it can take a number of input
rays to average over, rather than only produce a single accumulated
record (which can now be done with -c 0).

=====================
Version 4.0

Added -n option to rvu to provide parallel rendering.

****** COMPATIBILITY CHANGE ********
Changed ".pic" extension to ".hdr" in all sources and documentation
to improve interoperability with other software, since this has become
the de facto extension for Radiance RGBE and XYZE pictures.  Since file
extensions were never more than a convention in Radiance, this does not
affect operation, but may require the update of scripts, etc. written
by others that assume the ".pic" suffix for Radiance output.

Added -N option to objview to support multiprocessing.

Improved sampling of circular sources (source, sphere, ring types) with
quite a bit of help from David Geisler-Moroder.

Added "rpict" and "rvu" variables to rad, and made these as well as
the "oconv", "mkillum" and "pfilt" variables accept an alternate
command path in each case.  Change suggested by Lars Grobe based
on similar Radzilla (radz) facility by Carsten Bauer.

Fixed rad -v N specification to use actual view name if one.

Fixed error in mkillum calculation where it neglected indirect
source contributions from BTDF illum's.